add test notification option

--- a/custom_components/webuntis/translations/de.json
+++ b/custom_components/webuntis/translations/de.json
@@ -95,6 +95,12 @@
         "data_description": {
           "notify_data": "z. B.:\n Benachrichtigungssymbol: mdi:school-outline"
         }
+      },
+      "test": {
+        "title": "Test Menü",
+        "data": {
+          "tests": "Option zum testen"
+        }
       }
     }
   },
