--- a/custom_components/webuntis/translations/en.json
+++ b/custom_components/webuntis/translations/en.json
@@ -93,7 +93,8 @@
           "lesson change": "Lesson was swapped"
         },
         "data_description": {
-          "notify_data": "e.g.,\nnotification_icon: mdi:school-outline"
+          "notify_data": "e.g.,\nnotification_icon: mdi:school-outline",
+          "notify_target": "Test the notifications in the Test menu"
         }
       },
       "test": {
