--- a/custom_components/webuntis/translations/en.json
+++ b/custom_components/webuntis/translations/en.json
@@ -32,6 +32,7 @@
     "error": {
       "extended_timetable": "\"Request extended timetable\" is required for the \"Subject Filter - Description\" and \"Calendar Description\" (Lesson Info) option",
       "unknown_service": "Service ID not found.",
+      "not_a_dict": "Has to be a dictionary",
       "notification_invalid": "Notification could not be sent. See logs for more information.",
       "unknown": "Unexpected error"
     },
