--- a/custom_components/webuntis/translations/de.json
+++ b/custom_components/webuntis/translations/de.json
@@ -95,7 +95,7 @@
           "lesson change": "Eine Stunde wurde ausgetauscht"
         },
         "data_description": {
-          "notify_data": "z. B.:\n Benachrichtigungssymbol: mdi:school-outline",
+          "notify_data": "z. B.:\n notification_icon: mdi:school-outline",
           "notify_target": "Testen die Benachrichtigungen im Testmenü"
         }
       },
