--- a/custom_components/webuntis/translations/en.json
+++ b/custom_components/webuntis/translations/en.json
@@ -121,8 +121,8 @@
     "notify_options": {
       "options": {
         "code": "Lesson status changed",
-        "room": "Room changed",
-        "teacher": "Teacher changed",
+        "rooms": "Room changed",
+        "teachers": "Teacher changed",
         "cancelled": "Lesson is cancelled",
         "lesson_change": "Lesson was swapped"
       }
