--- a/custom_components/webuntis/translations/en.json
+++ b/custom_components/webuntis/translations/en.json
@@ -23,7 +23,11 @@
           "username": "Username",
           "password": "Password",
           "timetable_source": "Timetable source",
-          "timetable_source_id": "Full name/Class/Subject/Room"
+          "timetable_source_id": "Full name/Class"
+        },
+        "data_description": {
+          "timetable_source": "Select the source of the timetable",
+          "timetable_source_id": "Enter the full name of the student/teacher or the class name"
         }
       }
     }
@@ -125,6 +129,15 @@
         "teachers": "Teacher changed",
         "cancelled": "Lesson is cancelled",
         "lesson_change": "Lesson was swapped"
+      }
+    },
+    "timetable_source": {
+      "options": {
+        "student": "Student",
+        "klasse": "Klasse",
+        "teacher": "Teacher",
+        "subject": "Subject",
+        "room": "Raum"
       }
     },
     "notify_template": {
