--- a/custom_components/webuntis/translations/en.json
+++ b/custom_components/webuntis/translations/en.json
@@ -26,7 +26,6 @@
           "timetable_source_id": "Full name/Class"
         },
         "data_description": {
-          "timetable_source": "Select the source of the timetable",
           "timetable_source_id": "Enter the full name of the student/teacher or the class name"
         }
       }
@@ -134,7 +133,7 @@
     "timetable_source": {
       "options": {
         "student": "Student",
-        "klasse": "Klasse",
+        "klasse": "Class",
         "teacher": "Teacher",
         "subject": "Subject",
         "room": "Raum"
