adds setting to use 'invalid lessons' and make them valid lessons

--- a/custom_components/webuntis/translations/en.json
+++ b/custom_components/webuntis/translations/en.json
@@ -54,7 +54,8 @@
         "data": {
           "filter_mode": "Filter mode",
           "filter_subjects": "Filter mode - subjects",
-          "filter_description": "Filter mode - Description"
+          "filter_description": "Filter mode - Description",
+          "invalid_subjects": "Use invalid subjects"
         },
         "data_description": {
           "filter_description": "Hide lessons that contain the following phrases in the description. (Comma-separated list)"
