--- a/custom_components/webuntis/translations/de.json
+++ b/custom_components/webuntis/translations/de.json
@@ -54,7 +54,8 @@
         "data": {
           "filter_mode": "Fächer Filter",
           "filter_subjects": "Fächer Filter - Fächer",
-          "filter_description": "Fächer Filter- Beschreibung"
+          "filter_description": "Fächer Filter- Beschreibung",
+          "invalid_subjects": "Fehlerhafte Fächer benutzen"
         },
         "data_description": {
           "filter_description": "Verstecke Stunden, die die folgenden Ausdrücke in der Beschreibung enthalten. (Kommagetrennte Liste)"
