Update source file en.json

--- a/custom_components/webuntis/translations/en.json
+++ b/custom_components/webuntis/translations/en.json
@@ -12,8 +12,9 @@
       "student_not_found": "Student not found. Check the name or choose another source.",
       "teacher_not_found": "Teacher not found. Check the name or choose another source.",
       "class_not_found": "Class not found. Check the class or choose another source.",
-      "no_rights_for_timetable": "No rights for timetable.",
-      "unknown": "Unexpected error"
+      "no_rights_for_timetable": "No rights for timetable. Choose another name or source.",
+      "no_school_year": "Configuration via class only possible during an active school year.",
+      "unknown": "Unexpected error. View logs for more information."
     },
     "step": {
       "user": {
@@ -27,6 +28,29 @@
         },
         "data_description": {
           "timetable_source_id": "Enter the full name of the student/teacher or the class name"
+        }
+      },
+      "timetable_source": {
+        "description": "Select the data source"
+      },
+      "pick_student": {
+        "description": "Enter a Student Name",
+        "data": {
+          "surname": "Surname",
+          "fore_name": "Fore Name"
+        }
+      },
+      "pick_teacher": {
+        "description": "Enter a Teacher Name",
+        "data": {
+          "surname": "Surname",
+          "fore_name": "Fore Name"
+        }
+      },
+      "pick_klasse": {
+        "description": "Enter a class name",
+        "data": {
+          "klasse": "Class"
         }
       }
     }
@@ -132,6 +156,7 @@
     },
     "timetable_source": {
       "options": {
+        "personal": "Personal timetable (recommended)",
         "student": "Student",
         "klasse": "Class",
         "teacher": "Teacher",
