--- a/custom_components/webuntis/translations/de.json
+++ b/custom_components/webuntis/translations/de.json
@@ -94,14 +94,16 @@
           "calendar_show_cancelled_lessons": "Kalender - Ausfallende Stunden",
           "calendar_description": "Kalender - Beschreibung",
           "calendar_room": "Kalender - Ort",
-          "calendar_show_room_change": "Kalender - Zimmerwechsel"
+          "calendar_show_room_change": "Kalender - Zimmerwechsel",
+          "calendar_replace_name": "Ereignisnamen ersetzen"
         },
         "data_description": {
           "calendar_long_name": "Verwende den langen Namen der Stunden im Kalender.",
           "calendar_show_cancelled_lessons": "Zeige ausfallende Stunden im Kalender an.",
           "calendar_description": "Bestimme, was in der Beschreibung eines Kalender-Events stehen soll.",
           "calendar_room": "Bestimme, was im Kalender als Ort angezeigt wird.",
-          "calendar_show_room_change": "Zeige Zimmerwechsel im Kalender an."
+          "calendar_show_room_change": "Zeige Zimmerwechsel im Kalender an.",
+          "calendar_replace_name": "Bsp:\nM: Mathe"
         }
       },
       "backend": {
