--- a/custom_components/webuntis/translations/en.json
+++ b/custom_components/webuntis/translations/en.json
@@ -94,14 +94,16 @@
           "calendar_show_cancelled_lessons": "Calendar - cancelled lessons",
           "calendar_description": "Calendar - description",
           "calendar_room": "Calendar - Location",
-          "calendar_show_room_change": "Calendar - Room change"
+          "calendar_show_room_change": "Calendar - Room change",
+          "calendar_replace_name": "Replace event name"
         },
         "data_description": {
           "calendar_long_name": "Use the long name of the hours in the calendar.",
           "calendar_show_cancelled_lessons": "Show cancelled lessons in the calendar.",
           "calendar_description": "Determine what should be in the description of a calendar event.",
           "calendar_room": "Specify what to display for location.",
-          "calendar_show_room_change": "Show room changes in the calendar."
+          "calendar_show_room_change": "Show room changes in the calendar.",
+          "calendar_replace_name": "e.g.,\nM: Math"
         }
       },
       "backend": {
