--- a/custom_components/webuntis/translations/de.json
+++ b/custom_components/webuntis/translations/de.json
@@ -36,8 +36,8 @@
       "pick_student": {
         "description": "Name eines Schülers eingeben",
         "data": {
-          "surname": "Nachnahme",
-          "fore_name": "Vornahme"
+          "surname": "Nachname",
+          "fore_name": "Vorname"
         }
       },
       "pick_teacher": {
