--- a/custom_components/webuntis/translations/en.json
+++ b/custom_components/webuntis/translations/en.json
@@ -68,6 +68,7 @@
         "menu_options": {
           "filter": "Filter",
           "calendar": "Calendar",
+          "lesson": "Lesson",
           "backend": "Backend",
           "notify_menu": "Notify Menu"
         }
@@ -86,11 +87,23 @@
           "invalid_subjects": "Allow lessons with no subjects"
         }
       },
+      "lesson": {
+        "title": "Lesson Settings",
+        "description": "Settings to customize how the lesson is displayed. \nThis will be applied to the calendar and notifications.",
+        "data": {
+          "lesson_long_name": "Long name",
+          "lesson_replace_name": "Replace Lesson name",
+          "lesson_add_teacher": "Add Teacher to subject"
+        },
+        "data_description": {
+          "lesson_replace_name": "e.g.,\nM: Math",
+          "lesson_add_teacher": "Select which subjects should be displayed with the teacher's name."
+        }
+      },
       "calendar": {
         "title": "Calendar Settings",
         "description": "Settings to customize the calendar.",
         "data": {
-          "calendar_long_name": "Calendar - long name",
           "calendar_show_cancelled_lessons": "Calendar - cancelled lessons",
           "calendar_description": "Calendar - description",
           "calendar_room": "Calendar - Location",
@@ -98,12 +111,11 @@
           "calendar_replace_name": "Replace event name"
         },
         "data_description": {
-          "calendar_long_name": "Use the long name of the hours in the calendar.",
           "calendar_show_cancelled_lessons": "Show cancelled lessons in the calendar.",
           "calendar_description": "Determine what should be in the description of a calendar event.",
           "calendar_room": "Specify what to display for location.",
           "calendar_show_room_change": "Show room changes in the calendar.",
-          "calendar_replace_name": "e.g.,\nM: Math"
+          "calendar_replace_name": "e.g.,\nCancelled: ❌"
         }
       },
       "backend": {
@@ -151,6 +163,7 @@
   "selector": {
     "notify_options": {
       "options": {
+        "homework": "Homework added",
         "code": "Lesson status changed",
         "rooms": "Room changed",
         "teachers": "Teacher changed",
